--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.1.1",
 		"@tanstack/react-query": "^5.17.19",
 		"next": "14.1.0",
 		"react": "^18",
