--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"next": "14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-responsive-carousel": "^3.2.23",
 		"sass": "^1.70.0"
 	},
 	"devDependencies": {
